side menu flickering fixed

--- a/src/Component/CommonComponent/Header.css
+++ b/src/Component/CommonComponent/Header.css
@@ -131,6 +131,23 @@
 	height: 100%;
 	object-fit: cover;
 }
+nav.custom-sidebar .d-flex span {
+    font-family: Poppins;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    text-align: center;
+    white-space: nowrap;
+    border-radius: 22px;
+}
+nav.custom-sidebar .d-flex a {
+    width: 142px;
+    height: 121px;
+}
+nav.custom-sidebar .d-flex a.active {
+    width: 142px;
+    height: 121px;
+}
 
 @media only screen and (max-width: 768px) {
 	.header-content {
